@@ -1,3 +1,10 @@
+2005-08-17  Not Zed  <NotZed@Ximian.com>
+
+	** See bug #312668.
+
+	* storage/exchange-offline-handler.[ch]: removed, not used anyway.
+	Instead some rubbish listning to gconf keys is used, groan.
+
 2005-08-17  Praveen Kumar  <kpraveen@novell.com>
 
 	* addressbook/e-book-backend-exchange.c
